Description
TS sends back a GOAWAY frame with COMPRESSION_ERROR if a request header field have empty value.
If I understand correctly, empty header value is allowed except pseudo-headers.
header-field = field-name ":" OWS field-value OWS
field-name = token
field-value = *( field-content / obs-fold )
http://tools.ietf.org/html/rfc7230#section-3.2
:path pseudo-header has a limitation.
This pseudo-header field MUST NOT be empty for "http" or "https"
URIs; "http" or "https" URIs that do not contain a path component
MUST include a value of '/'.
https://tools.ietf.org/html/draft-ietf-httpbis-http2-17#section-8.1.2.3