TS-3495 Accept empty header field value

(cherry picked from commit 3f311ce3aae432e3679a8efe0fa54231abea87f6)

Conflicts:
	CHANGES